loginp.css
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;500;700;900&display=swap");

body {
  background: #7a7bae;
  font-family: "Noto Sans", sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.container {
  display: flex;
  position: relative;
  width: 60%;
  margin-top: 80px;
  margin-bottom: 100px;
  margin-left: 30px;
  margin-right: 30px;
  height: 70%;
  background: #2f2f3b;
  border-radius: 12px;
}

.logos {
  font-size: 1.8rem;
  margin-left: 2%;
  color: white;
  text-align: left;
}

.login-img {
  background-image: url(https://images.unsplash.com/photo-1495287924875-c158d2e8aafc?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
  background-size: cover;
  border-radius: 12px;
  height: 96%;
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 20px;
  margin-top: 10px;
  margin-left: 10px;
  box-sizing: border-box;
  color: white;
}

.backtoweb button {
  background: rgb(77, 78, 77);
  border-radius: 18px;
  color: white;
  font-size: 16px;
  cursor: pointer;
  opacity: 0.7;
  margin-left: 140px;
  width: 55%;
}

.img-text {
  text-align: center;
  font-size: 28px;
  margin-top: 80%;
  margin-bottom: 0;
}

.dashes {
  text-align: center;
  padding-top: 0;
}

.dashes i {
  width: 40px;
}

.logo-button {
  display: flex;
  justify-content: space-between;
}

.login-details {
  padding: 1%;
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.form-container {
  width: 80%;
}

.form-group i {
  position: absolute;
  top: 50%;
  right: 15px;
  cursor: pointer;
  color: #ccc;
}

.title {
  font-size: 35px;
  color: white;
  font-weight: normal; /* Make the title normal weight */
}

.login-link {
  font-size: smaller;
  color: white;
  margin-top: -20px;
  margin-bottom: 25px;
  margin-left: 10px;
}

.login-link a {
  color: rgb(128, 91, 147);
}

.form-group {
  display: flex;
  justify-content: space-between;
}

#fname,
#lname {
  padding: 10px;
  width: 50%;
  display: flex;
  justify-content: space-between;
  border: none;
  border-radius: 5px;
  background: #444;
  color: white;
}

#or-register {
  display: flex;
  align-items: center;
  text-align: center;
  color: white;
  font-size: small;
  margin-bottom: 25px;
  margin-left: 12px;
  width: 99%;
  padding-top: 15px;
}

#or-register::before,
#or-register::after {
  content: "";
  flex: 0.46;
  border-bottom: 1px solid #ccc;
}

#or-register::before {
  margin-right: 0.25em;
}

#or-register::after {
  margin-left: 0.25em;
}

.form-group input {
  width: 100%;
  padding: 10px;
  margin: 8px;
  border: none;
  border-radius: 5px;
  background: #444;
  color: white;
}

.eye {
  position: relative;
  opacity: 0.7;
  margin-bottom: 10px;
  cursor: pointer;
}

.eye i {
  font-size: 18px;
  color: white;
  background-color: transparent;
}

.terms {
  padding-bottom: 11%;
  font-size: small;
  margin-left: 10px;
}

.terms label {
  color: white;
}

.terms a {
  color: rgb(128, 91, 147);
}

.create-account {
  width: 95%;
  padding: 10px;
  border: none;
  border-radius: 5px;
  background: rgb(128, 91, 147);
  color: white;
  font-size: 16px;
  margin-left: 11px;
  cursor: pointer;
}

.social-login {
  display: flex;
  justify-content: space-around;
  margin-top: 16px;
  margin-bottom: 40px;
  width: 100%;
}

.social-login button {
  display: flex;
  justify-content: center;
  width: 44%;
  padding: 10px;
  border: none;
  border-radius: 5px;
  background: #333;
  color: white;
  font-size: 16px;
  cursor: pointer;
}

.social-login .google-login {
  background: transparent;
  border: solid #ccc 1px;
}

.social-login .apple-login {
  background: transparent;
  border: solid #ccc 1px;
}

@media (max-width: 471px) {
  .container {
    flex-direction: column;
    width: 100%;
    height: auto;
  }

  .login-img {
    display: none;
  }

  .login-details {
    width: 90%;
    padding: 20px;
  }

  .title {
    font-size: 26px;
    padding-bottom: 2px;
  }

  .form-group input {
    width: 100%;
    padding: 10px;
    margin: 5px;
    border: none;
    border-radius: 5px;
    background: #444;
    color: white;
  }

  #fname,
  #lname {
    padding: 10px;
    width: 50%;
    display: flex;
    justify-content: space-between;
    border: none;
    border-radius: 5px;
    background: #444;
    color: white;
  }

  .create-account {
    width: 95%;
    padding: 10px;
    border: none;
    border-radius: 5px;
    background: rgb(128, 91, 147);
    color: white;
    font-size: 16px;
    margin-left: 11px;
    cursor: pointer;
  }

  #or-register {
    display: flex;
    align-items: center;
    text-align: center;
    color: white;
    font-size: small;
    margin-bottom: 25px;
    width: 100%;
    padding-top: 15px;
  }

  #or-register::before,
  #or-register::after {
    content: "";
    flex: 0 1 25%;
    border-bottom: 1px solid #ccc;
  }

  #or-register::before {
    margin-right: 0.25em;
  }

  #or-register::after {
    margin-left: 0.25em;
  }

  .social-login button {
    display: flex;
    justify-content: center;
    width: 44%;
    padding: 10px;
    border: none;
    border-radius: 5px;
    background: #333;
    color: white;
    font-size: 16px;
    cursor: pointer;
  }
}

